@@ -16,6 +16,7 @@ name: Scrappy
 requires:
   Array::Unique: 0
   Cwd: 0
+  Data::Dumper: 0
   DateTime: 0
   DateTime::Format::SQLite: 0
   File::Find::Rule: 0
@@ -33,4 +34,4 @@ requires:
   WWW::Mechanize: 0
   Web::Scraper: 0
   YAML::Syck: 0
-version: 0.93111250
+version: 0.94111260
