@@ -3,7 +3,7 @@ NAME
     Framework
 
 VERSION
-    version 0.93111250
+    version 0.94111260
 
 SYNOPSIS
         #!/usr/bin/perl
@@ -236,6 +236,21 @@ METHODS
         
         # supply your own file name
             $scraper->download($requested_url, '/tmp', 'somefile.txt');
+
+  dumper
+    The dumper method is a convenience feature that passes the passed-in
+    objects to Data::Dumper which in turn returns a stringified
+    representation of that object/data-structure.
+
+        my  $scaper = Scrappy->new;
+        my  $requested_url = '...';
+        
+        $scraper->get($requested_url);
+        
+    my  $data = $scraper->select('//a[@href]')->data;
+        
+    # print out the scraped data
+        print $scraper->dumper($data);
 
   form
     The form method is used to submit a form on the current page.
