@@ -4,7 +4,7 @@ Scrappy - The All Powerful Web Spidering, Scraping, Creeping Crawling Framework
 
 # VERSION
 
-version 0.93111250
+version 0.94111260
 
 # SYNOPSIS
 
@@ -265,6 +265,25 @@ the originating page.
 
         # supply your own file name
         $scraper->download($requested_url, '/tmp', 'somefile.txt');
+
+## dumper
+
+The dumper method is a convenience feature that passes the passed-in objects to
+[Data::Dumper](http://search.cpan.org/perldoc?Data::Dumper) which in turn returns a stringified representation of that
+object/data-structure.
+
+    my  $scaper = Scrappy->new;
+    my  $requested_url = '...';
+    
+
+        $scraper->get($requested_url);
+    
+
+    my  $data = $scraper->select('//a[@href]')->data;
+    
+
+    # print out the scraped data
+    print $scraper->dumper($data);
 
 ## form
 
