@@ -3,7 +3,7 @@
 
 package Scrappy::Logger;
 BEGIN {
-  $Scrappy::Logger::VERSION = '0.93111250';
+  $Scrappy::Logger::VERSION = '0.94111260';
 }
 
 # load OO System
@@ -150,7 +150,7 @@ Scrappy::Logger - Scrappy Scraper Event Logging
 
 =head1 VERSION
 
-version 0.93111250
+version 0.94111260
 
 =head1 SYNOPSIS
 
