@@ -1,6 +1,6 @@
 package Scrappy::Plugin;
 BEGIN {
-  $Scrappy::Plugin::VERSION = '0.93111250';
+  $Scrappy::Plugin::VERSION = '0.94111260';
 }
 
 # load OO System
