@@ -1,6 +1,6 @@
 package Scrappy::Project::Document;
 BEGIN {
-  $Scrappy::Project::Document::VERSION = '0.93111250';
+  $Scrappy::Project::Document::VERSION = '0.94111260';
 }
 
 use Moose::Role;
@@ -48,7 +48,7 @@ sub parse {
 
     my $record = {};
     map { $record->{$_} = $self->$_($self->scraper, $vars) } @{$self->fields};
-    $record->{url} = $self->scraper->url->as_string;
+    # $record->{url} = $self->scraper->url->as_string;
     push @{$self->records}, $record;
 
     return $record;
