@@ -3,7 +3,7 @@
 
 package Scrappy::Queue;
 BEGIN {
-  $Scrappy::Queue::VERSION = '0.93111250';
+  $Scrappy::Queue::VERSION = '0.94111260';
 }
 
 # load OO System
@@ -127,7 +127,7 @@ Scrappy::Queue - Scrappy HTTP Request Flow-Control System
 
 =head1 VERSION
 
-version 0.93111250
+version 0.94111260
 
 =head1 SYNOPSIS
 
