@@ -1,6 +1,6 @@
 package Scrappy::Scraper::UserAgent;
 BEGIN {
-  $Scrappy::Scraper::UserAgent::VERSION = '0.93111250';
+  $Scrappy::Scraper::UserAgent::VERSION = '0.94111260';
 }
 
 # load OO System
